--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  min-height: 100vh;
 }
 
 body {
@@ -14,15 +14,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 a {
   color: inherit;
   text-decoration: none;
+}
+
+li {
+  list-style: square;
+  list-style-type: square;
+  list-style-position: inside;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: var(--font-roboto), sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -70,6 +74,9 @@ a {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --font-roboto: var(--font-roboto);
+  --font-open-sans: var(--font-open-sans);
+  --font-montserrat: var(--font-montserrat);
 }
 
 :root {
