--- a/app/page.module.css
+++ b/app/page.module.css
@@ -13,20 +13,20 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  font-family: var(--font--roboto);
+  font-family: var(--font-open-sans), sans-serif;
   background-color: var(--background);
 }
 
 .main {
   display: flex;
   min-height: 100vh;
+  /*max-height: 100vh;*/
   width: 100%;
-  max-width: 800px;
+  max-width: 1200px;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
   background-color: var(--foreground);
-  padding: 120px 60px;
 }
 
 .intro {
@@ -37,14 +37,24 @@
   gap: 24px;
 }
 
-.intro h1 {
-  max-width: 320px;
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 48px;
-  letter-spacing: -2.4px;
-  text-wrap: balance;
-  color: var(--text-primary);
+.main {
+  h1, h2, h3, h4, h5 {
+    font-weight: 600;
+    letter-spacing: -2.4px;
+    text-wrap: balance;
+    color: var(--text-primary);
+    font-family: var(--font-roboto), sans-serif;
+  }
+
+  h1 {
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  h2 {
+    font-size: 24px;
+    line-height: 36px;
+  }
 }
 
 .intro p {
