--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,4 @@
-@import 'tailwindcss';
-@import 'tw-animate-css';
-
-@custom-variant dark (&:is(.dark *));
-
+/* Critical base styles FIRST for faster initial paint */
 html,
 body {
   max-width: 100vw;
@@ -13,6 +9,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* THEN import frameworks */
+@import 'tailwindcss';
+@import 'tw-animate-css';
+
+@custom-variant dark (&:is(.dark *));
 
 a {
   color: inherit;
